feat: expose map projection api
